correct some files

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div id="main">
+
+  <div id="section-login">
+
+    <h2>Login</h2>
+
+    <div class="mb-3 row">
+    <label for="user" class="col-sm-2 col-form-label">Email</label>
+    <input type="text" class="form-control" id="user" placeholder="example@prov.dom">
+
+    <label for="pswd" class="col-sm-2 col-form-label">Password</label>
+    <input type="password" class="form-control" id="pswd">
+    <div id="div-button">
+    <button type="submit" class="btn btn-primary mb-3">Login</button>
+    </div>
+  </div>
+  </div>
+</div>
