--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -2,6 +2,12 @@ main {
   min-height: 500px;
 }
 
+h2 {
+  margin: 10px 0;
+  text-align: center;
+  font-size: 30px;
+}
+
 #section-banner {
   min-height: 400px;
 }
@@ -17,4 +23,34 @@ main {
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: auto;
+}
+
+mat-grid-list {
+  margin: 10px 0;
+}
+
+mat-grid-title {
+  padding: 2px;
+  border-radius: 30px;
+}
+
+mat-card-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: space-around;
+}
+
+mat-card-actions p {
+  color: red;
+  font-size: 30px;
+}
+
+mat-card img {
+  height: 300px;
+  width: 300px;
 }
