--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -27,25 +27,67 @@
   </section>
 
   <section id="section-cards">
+  <h2>Jogos em promoção</h2>
+
+  <mat-grid-list cols="3">
+    <mat-grid-tile>
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>Jogo 1</mat-card-title>
       </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+      <img mat-card-image src="../../assets/img/jogo1.PNG" alt="Photo of Jogo 1">
       <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
+        Descrição do jogo
       </p>
     </mat-card-content>
     <mat-card-actions>
-      < button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+        <p>R$ 300,00</p>
+      <button mat-button>Comprar</button>
     </mat-card-actions>
-  </mat-card>
+    </mat-card>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Jogo 2</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="../../assets/img/jogo2.PNG" alt="Photo of Jogo 2">
+      <mat-card-content>
+      <p>
+        Descrição do jogo
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <p>R$ 200,00</p>
+      <button mat-button>Comprar</button>
+    </mat-card-actions>
+    </mat-card>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Jogo 2</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="../../assets/img/jogo3.PNG" alt="Photo of Jogo 3">
+      <mat-card-content>
+      <p>
+        Descrição do jogo
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <p>R$ 400,00</p>
+      <button mat-button>Comprar</button>
+    </mat-card-actions>
+    </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+
   </section>
 
 </main>
