--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,3 @@
-<p>rodape works!</p>
+<footer>
+  <p>Developed by <a href="https://github.com/gabrielfelipeassuncaodesouza">Gabriel Felipe</a></p>
+</footer>
