--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,9 @@
 <p>
   <mat-toolbar color="primary">
-  <span><img src="./assets/img/logo.png"></span>
-  <span>Produtos</span>
+  <span><a routerLink="inicio"><img src="./assets/img/logo.png"></a></span>
+  <span><a routerLink="inicio">Produtos</a></span>
   <span class="example-spacer"></span>
-  <span>Login</span>
+  <span><a routerLink="login">Login</a></span>
 </mat-toolbar>
 </p>
 
