correct some styles

--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,9 +1,10 @@
 main {
   min-height: 500px;
+  margin: 30px 0;
 }
 
 h2 {
-  margin: 10px 0;
+  margin: 30px 0;
   text-align: center;
   font-size: 30px;
 }
@@ -25,13 +26,22 @@ h2 {
   background-size: auto;
 }
 
+p {
+  text-align: center;
+  margin: 6px 0;
+}
+
 mat-grid-list {
   margin: 10px 0;
 }
 
 mat-grid-title {
-  padding: 2px;
+  padding: 5px;
   border-radius: 30px;
+}
+
+mat-card-title {
+  padding-bottom: 10px;
 }
 
 mat-card-header {
@@ -47,10 +57,14 @@ mat-card-actions {
 
 mat-card-actions p {
   color: red;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 mat-card img {
   height: 300px;
   width: 300px;
+}
+
+mat-card button {
+  background-color: rgb(187, 231, 231);
 }
