add description to cards

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -38,7 +38,7 @@
       <img mat-card-image src="../../assets/img/jogo1.PNG" alt="Photo of Jogo 1">
       <mat-card-content>
       <p>
-        Descrição do jogo
+        Para matar a saudade dos 8 bits!
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -56,7 +56,7 @@
       <img mat-card-image src="../../assets/img/jogo2.PNG" alt="Photo of Jogo 2">
       <mat-card-content>
       <p>
-        Descrição do jogo
+        Um arcade desafiador!
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -74,7 +74,7 @@
       <img mat-card-image src="../../assets/img/jogo3.PNG" alt="Photo of Jogo 3">
       <mat-card-content>
       <p>
-        Descrição do jogo
+        Para os amantes de console!
       </p>
     </mat-card-content>
     <mat-card-actions>
