add more sections

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,9 @@
     <label for="pswd" class="col-sm-2 col-form-label">Password</label>
     <input type="password" class="form-control" id="pswd">
     <div id="div-button">
-    <button type="submit" class="btn btn-primary mb-3">Login</button>
+    <a routerLink="/inicio">
+      <button type="submit" class="btn btn-primary mb-3">Login</button>
+    </a>
     </div>
   </div>
   </div>
