--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -30,62 +30,23 @@
   <h2>Jogos em promoção</h2>
 
   <mat-grid-list cols="3">
-    <mat-grid-tile>
+    <mat-grid-tile *ngFor="let produto of produtos">
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Jogo 1</mat-card-title>
+            <mat-card-title>{{produto.produto}}</mat-card-title>
       </mat-card-header>
-      <img mat-card-image src="../../assets/img/jogo1.PNG" alt="Photo of Jogo 1">
+          <img mat-card-image src="../../assets/img/{{produto.photo}}" alt="Photo of Jogo 1">
       <mat-card-content>
       <p>
-        Para matar a saudade dos 8 bits!
+              {{produto.description}}
       </p>
     </mat-card-content>
     <mat-card-actions>
-        <p>R$ 300,00</p>
-      <button mat-button>Comprar</button>
-    </mat-card-actions>
-    </mat-card>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Jogo 2</mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src="../../assets/img/jogo2.PNG" alt="Photo of Jogo 2">
-      <mat-card-content>
-      <p>
-        Um arcade desafiador!
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-        <p>R$ 200,00</p>
-      <button mat-button>Comprar</button>
-    </mat-card-actions>
-    </mat-card>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Jogo 2</mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src="../../assets/img/jogo3.PNG" alt="Photo of Jogo 3">
-      <mat-card-content>
-      <p>
-        Para os amantes de console!
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-        <p>R$ 400,00</p>
+            <p>{{produto.preco | currency : 'BRL'}}</p>
       <button mat-button>Comprar</button>
     </mat-card-actions>
     </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
-
   </section>
-
 </main>
-
