--- a/src/app/restrito/menu-product/menu-product.component.html
+++ b/src/app/restrito/menu-product/menu-product.component.html
@@ -3,7 +3,7 @@
     <span><a routerLink="/restrito/lista">Listar Produtos</a></span>
     <span><a routerLink="/restrito/cadastro">Cadastro Produtos</a></span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button" (click)="logout()">
       <span class="material-icons">logout</span>
     </button>
   </mat-toolbar-row>
