--- a/src/app/restrito/create-product/create-product.component.html
+++ b/src/app/restrito/create-product/create-product.component.html
@@ -4,30 +4,30 @@
     <form>
       <div class="col-auto">
         <label for="produto">Produto</label>
-        <input type="text" class="form-control" name="produto">
+        <input type="text" class="form-control" name="produto" [(ngModel)]="produto.produto">
       </div>
       <br>
 
       <div class="col-auto">
         <label for="descricao">Descrição</label>
-        <input type="text" class="form-control" name="descricao">
+        <input type="text" class="form-control" name="descricao" [(ngModel)]="produto.description">
       </div>
       <br>
 
       <div class="col-auto">
         <label for="foto">Foto</label>
-        <input type="text" class="form-control" name="foto">
+        <input type="text" class="form-control" name="foto" [(ngModel)]="produto.photo">
       </div>
       <br>
 
       <div class="col-auto">
         <label for="preco">Preço</label>
-        <input type="number" class="form-control" name="preco">
+        <input type="number" class="form-control" name="preco" [(ngModel)]="produto.preco">
       </div>
       <br>
 
       <div class="col-auto">
-        <button type="button" class="btn btn-primary mb-3">Cadastrat</button>
+        <button type="button" class="btn btn-primary mb-3" (click)="cadastrar()">Cadastrar</button>
       </div>
     </form>
   </section>
